# cockpit

./: Makefile.am
os-installation/: create-plugin-filter-files.sh
pkg/shell/: indexes.jsx  nav.scss  shell.scss
pkg/static/: login.html  login.js
src/branding/netfield/: Makefile.am
src/common/: cockpiterror.h  cockpitwebresponse.c
src/ws/: Makefile-ws.am  cockpitauth.c  cockpithandlers.c
