netfieldbrandingdir = $(datadir)/cockpit/branding/netfield

dist_netfieldbranding_DATA = \
	src/branding/netfield/ABCDiatype-Regular.woff \
	src/branding/netfield/branding.css \
	src/branding/netfield/disclaimer \
	src/branding/netfield/favicon.ico \
	src/branding/netfield/logo-header.png \
	src/branding/netfield/logo-netfield.png \
	src/branding/netfield/logo.png \
	$(NULL)